# Nuwa0.0.1

./: LICENSE.txt  Nuwa.ipynb  README.md  dataloader.py  demo.py  network.py  optimizers.py  process.py  pyproject.toml  requirement  setup.cfg  setup.py  visualization.py
Nuwa/: __init__.py  activation.py  dataloader.py  demo.py  loss.py  network.py  optimizers.py  process.py  utils.py
Ottergrad/: __init__.py  activation.py  autograd.py  loss.py  nn.py  otternumpy.py  utils.py
shell/: shell.py  utils.py
test/: Nuwa.ipynb  Nuwa0.1.0.ipynb  Nuwa2.0.0.ipynb  pycuda.ipynb
utils/: lossfunc.py  node.py  util.py  utils.py  weight.py
