[metadata]
name = Nuwa
version = 2.0.0
author = Zixing QIU
author_email = zixing.qiu@etu.enseeiht.fr
description = "A deep learning framework powered by Zixing by using only numpy, aims to build a deep learning framework
    to compute partial differential equations with higher performance. This project is still in early development stage,
    and the underlying development of fully connected neural network and part of 2D CNN neural network has been
    completed. A dynamic back propagation graph is provided, it supports all latest optimizer, normalizations.
    The second phase will improve the project of the first phase to adapt it to the needs of computing partial
    differential equations. Finally, the Nuwa framework will be deployed as a C++ project and support CUDA and parallel
    computing. If you are interested in approving the deep learning framework calculation efficiency, you can contact
    me by my mail: zixing.qiu@etu.toulouse-inp.fr"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raulniconico/Nuwa0.0.1
project_urls =
    Bug Tracker = https://github.com/raulniconico/Nuwa0.0.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = Nuwa
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Nuwa